# instructor-cookbook

./: pyproject.toml
notebooks/: 00_text_classification.ipynb  01_llm_validator.ipynb  02_bulk_classification.ipynb
